# tailwind-lsp

./: Cargo.toml  README.md  enable.lua  test.html
lsp/: Cargo.toml
lsp/src/: handle.rs  lib.rs  text_store.rs  tree_sitter.rs  tree_sitter_queries.rs
lsp/src/tailwind/: mod.rs
src/: main.rs
